--- a/src/app/order/order-new/order-new.component.html
+++ b/src/app/order/order-new/order-new.component.html
@@ -53,8 +53,8 @@
     </div>
     <div class="row customFooterModal">
       <div class="footerButtons">
-        <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="closeModalOptionsAndSizes()">Cancel</button>
-        <button type="button" class="btn btn-primary btn-sm waves-light okButton" (click)="setProductOptionsAndSize(productToFindSizesAndOptions)" 
+        <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="closeModalOptionsAndSizes()">Cancel</button>
+        <button type="button" mdbBtn [class.btn-primary-custom]="true" size="sm" mdbWavesEffect [class.okButton]="true" (click)="setProductOptionsAndSize(productToFindSizesAndOptions)" 
           [disabled]="productToFindSizesAndOptions.sizes && productToFindSizesAndOptions.sizes.length > 0 && sizeSelectedValue == 'default'">Aceptar</button>
       </div>
     </div>
@@ -78,8 +78,8 @@
    
     <div class="row customFooterModal">
       <div class="footerButtons">
-        <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="closeModal()">{{cancelButtonText}}</button>
-        <button type="button" class="btn btn-primary btn-sm waves-light okButton" (click)="saveEditedOrder()">{{saveButtonText}}</button>
+        <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="closeModal()">{{cancelButtonText}}</button>
+        <button type="button" mdbBtn [class.btn-primary-custom]="true" size="sm" mdbWavesEffect [class.okButton]="true" (click)="saveEditedOrder()">{{saveButtonText}}</button>
       </div>
     </div>
   </div>
@@ -110,8 +110,8 @@
      
       <div class="row customFooterModal">
         <div class="footerButtons">
-          <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="closeModal()">{{cancelButtonText}}</button>
-          <button type="button" class="btn btn-primary btn-sm waves-light okButton" (click)="saveSlicedOrder()">{{saveButtonText}}</button>
+          <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="closeModal()">{{cancelButtonText}}</button>
+          <button type="button" mdbBtn [class.btn-primary-custom]="true" size="sm" mdbWavesEffect [class.okButton]="true" (click)="saveSlicedOrder()">{{saveButtonText}}</button>
         </div>
       </div>
     </div>
@@ -126,10 +126,10 @@ overflow: auto; overflow-x: hidden;">
           <
         </button>
         <div style="margin-left:8%;" *ngFor="let menu of menus" class="d-flex align-items-center menuButtonContainer">
-          <a (click)="getCategoriesAvailables(menu._id); applyClassMenu(menu._id)" [ngClass]="{'activeItem': activeMenu == menu._id}" class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light menuButton mt-0 mb-0" mdbRippleRadius><span>{{menu.name}}</span></a>
+          <a (click)="getCategoriesAvailables(menu._id); applyClassMenu(menu._id)" [ngClass]="{'activeItem': activeMenu == menu._id}"  mdbBtn size="md"  rounded="true" [class.btn-primary-custom]="true" mdbWavesEffect [class.menuButton]="true" class="d-flex align-items-center justify-content-center mt-0 mb-0" mdbRippleRadius><span>{{menu.name}}</span></a>
         </div>
         <div style="margin-left:8%;" *ngIf="dailyMenus.length > 0" class="d-flex align-items-center menuButtonContainer">
-          <a [ngClass]="{'activeItem': activeDailyMenu}" (click)="applyClassDailyMenu();" class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light menuButton mt-0 mb-0" mdbRippleRadius><span>{{ dailyMenusLabel }}</span></a>
+          <a [ngClass]="{'activeItem': activeDailyMenu}" (click)="applyClassDailyMenu();" mdbBtn size="md" [class.btn-primary-custom]="true" mdbWavesEffect  rounded="true" [class.menuButton]="true" class="d-flex align-items-center justify-content-center mt-0 mb-0" mdbRippleRadius><span>{{ dailyMenusLabel }}</span></a>
         </div>
         <button class="right-paddle paddle btn customPaddle waves-light" mdbRippleRadius>
           >
@@ -140,21 +140,21 @@ overflow: auto; overflow-x: hidden;">
       <div class="col-3 categoriesContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
         <ng-container *ngIf="activeDailyMenu == false">
           <div class="d-flex flex-wrap align-items-center justify-content-center categoryButtonContainer" *ngFor="let category of categories">
-            <a (click)="getProductsAvailablesByCategory(category._id); applyClassCategory(category._id); categorySelected = true;" [ngClass]="{'activeItem': activeCategory == category._id}"  class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light categoryButton" mdbRippleRadius><span>{{category.name}}</span></a>
+            <a (click)="getProductsAvailablesByCategory(category._id); applyClassCategory(category._id); categorySelected = true;" [ngClass]="{'activeItem': activeCategory == category._id}" mdbBtn  rounded="true" [class.btn-primary-custom]="true" size="md" mdbWavesEffect [class.categoryButton]="true" class="d-flex align-items-center justify-content-center" mdbRippleRadius><span>{{category.name}}</span></a>
           </div>
         </ng-container>
       </div>
       <div *ngIf="products && products.length > 0" class="col-9 d-flex flex-wrap col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
         <ng-container *ngIf="activeDailyMenu == false">
           <div class="productsButtonContainer" *ngFor="let product of products">
-            <a (click)="validateSizesAndOptions(product, 1)" class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light productButton" mdbRippleRadius><span>{{product.name}}</span></a>
+            <a (click)="validateSizesAndOptions(product, 1)" mdbBtn size="md"  rounded="true" [class.productButton]="true" [class.btn-primary-custom]="true" mdbWavesEffect  class="d-flex align-items-center justify-content-center" mdbRippleRadius><span>{{product.name}}</span></a>
           </div>
         </ng-container>
       </div>
       <div class="col-9 d-flex flex-wrap col-9 productsContainer customScrollBar pr-0 pl-0 pb-0 pt-0 mr-0 ml-0 mt-0 mb-0">
         <ng-container *ngIf="dailyMenus && dailyMenus.length > 0 && activeDailyMenu == true">
           <div class="productsButtonContainer" *ngFor="let dailyMenu of dailyMenus">
-            <a (click)="addDailyMenuToPreOrder(dailyMenu,1)" class="d-flex align-items-center justify-content-center btn btn-primary btn-md waves-light productButton" mdbRippleRadius><span>{{dailyMenu.name}}</span></a>
+            <a (click)="addDailyMenuToPreOrder(dailyMenu,1)" mdbBtn size="md"  rounded="true" [class.productButton]="true" [class.btn-primary-custom]="true" mdbWavesEffect  class="d-flex align-items-center justify-content-center" mdbRippleRadius><span>{{dailyMenu.name}}</span></a>
           </div>
         </ng-container>
       </div>
@@ -250,7 +250,7 @@ overflow: auto; overflow-x: hidden;">
       <div class="col-md-12 col-lg-12 col-sm-12 p-0 m-0 infoSection">
         <div class="float-left col-md-5 col-lg-5 col-sm-5 offset-md-7 pl-0">
           <button type="button" class="float-left btn btn-sm customButtonCancel waves-light ml-4 mr-0" mdbRippleRadius (click)="cancelPreOrder()" >Cancelar</button>
-          <button type="button" class="float-right btn btn-sm btn-primary waves-light" mdbRippleRadius (click)="confirmPreOrder()" >Confirmar</button>
+          <button type="button" mdbBtn rounded="true"  [class.btn-primary-custom]="true" mdbWavesEffect size="sm" class="float-right" mdbRippleRadius (click)="confirmPreOrder()" >Confirmar</button>
         </div>  
       </div>
     </div>
@@ -268,7 +268,7 @@ overflow: auto; overflow-x: hidden;">
             <span>$ {{ product.price }} </span>
           </div>
           <div class="col-2 p-0" *ngIf='enableDeleteProducts'>
-            <button type="button" [disabled]="product.deleted === true" class="z-depth-0 btn buttonOrder btn-tb btn-primary waves-effect waves-light float-left mt-0" (click)="showModalRemoveProduct(deleteTemplate, product)">
+            <button type="button" [disabled]="product.deleted === true" mdbBtn rounded="true"  [class.btn-primary-custom]="true" [class.buttonOrder]="true" mdbWavesEffect class="z-depth-0 btn-tb float-left mt-0" (click)="showModalRemoveProduct(deleteTemplate, product)">
             <i class="fa fa-times fa-1x"></i>
             </button>
           </div>
@@ -295,7 +295,7 @@ overflow: auto; overflow-x: hidden;">
     </div>
     <div class="row" *ngIf='enableCloseOrder'>
       <div class="col-4 offset-4 mt-2">               
-        <button type="button" class="btn btn-md btn-primary waves-light" mdbRippleRadius (click)="closeTable(closeOrderTemplate)">Cerrar Mesa</button>
+        <button type="button" rounded="true"  mdbBtn size="md" [class.btn-primary-custom]="true" mdbWavesEffect mdbRippleRadius (click)="closeTable(closeOrderTemplate)">Cerrar Mesa</button>
       </div>
     </div>
   </div>
