--- a/src/app/user/user-new/user-new.component.html
+++ b/src/app/user/user-new/user-new.component.html
@@ -138,9 +138,9 @@
 <br>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light"
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
       (click)="showModalCancel(cancelTemplate)">{{ 'Commons.Buttons.cancel' | translate }}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="userForm.invalid || passwordNotMatch() || pinNotMatch"
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="userForm.invalid || passwordNotMatch() || pinNotMatch"
       (click)="saveUser()">{{ 'Commons.Buttons.save' | translate }}</button>
   </div>
 </div>
