--- a/src/app/arqueo-caja/arqueo-caja-edit/arqueo-caja-edit.component.html
+++ b/src/app/arqueo-caja/arqueo-caja-edit/arqueo-caja-edit.component.html
@@ -179,7 +179,7 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="cashCountForm.invalid" (click)="updateCashCount()">{{saveButton}}</button>
+    <button type="button" rounded="true" mdbBtn type="button" size="sm" mdbWavesEffect class="customButtonCancel" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" rounded="true" mdbBtn type="button" [class.btn-primary-custom]="true" size="sm" mdbWavesEffect [disabled]="cashCountForm.invalid" (click)="updateCashCount()">{{saveButton}}</button>
   </div>
 </div>
