--- a/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
+++ b/src/app/cash-flows/cash-flows-new/cash-flows-new.component.html
@@ -104,8 +104,8 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid || hasCashRegister || hasType || hasPaymentType)"
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="(form.invalid || hasCashRegister || hasType || hasPaymentType)"
       (click)="saveCashFlow()">{{saveButton}}</button>
   </div>
 </div>
