--- a/src/app/cash-register/cash-register-list/cash-register-list.component.html
+++ b/src/app/cash-register/cash-register-list/cash-register-list.component.html
@@ -19,7 +19,7 @@
             </div>
             <div class="float-right">
                 <a [routerLink]="['/settings/general-settings/cash-register', { outlets: { edit: ['newCashRegister'] } }]"
-                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius 
+                    mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius 
                     *ngIf='enableNew'> + Nueva Caja</a>
             </div>
         </div>
@@ -58,12 +58,10 @@
                             <td>{{ cashRegister.availableDescription }}</td>
                             <td class="align-middle" *ngIf='enableActionButtons'>
                                 <a [routerLink]="['/settings/general-settings/cash-register', { outlets: { edit: ['editCashRegister', cashRegister._id] } }]"
-                                    class="btn btn-yellow btn-sm customButtonText"
-                                    *ngIf='enableEdit'>Editar</a>
-                                <button [disabled]="cashRegister.default === true" type="button"
-                                    class="btn btn-red btn-sm"
+                                    *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
+                                <a [disabled]="cashRegister.default === true" 
                                     (click)="showModalDelete(deleteTemplate, cashRegister._id)"
-                                    *ngIf='enableDelete'>Eliminar</button>
+                                    *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                             </td>
                         </tr>
                     </tbody>
