--- a/src/app/category/category-list/category.component.html
+++ b/src/app/category/category-list/category.component.html
@@ -16,7 +16,7 @@
         </header>
     </div>
     <div style="float: right">
-        <a [routerLink]="['newCategory']" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+        <a [routerLink]="['newCategory']" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
         *ngIf='enableNew'> + Nueva Categoria</a>
     </div>
 </div>
@@ -52,11 +52,9 @@
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ category.availableDescription }}</td>
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons' class="align-middle">
                         <a [routerLink]="['edit', category._id]" 
-                        class="btn btn-yellow btn-sm customButtonText"
-                        *ngIf='enableEdit'>Editar</a>
+                        *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
                         <a (click) = "showModalDelete(deleteTemplate, noDelete, category._id)" 
-                        class="btn btn-red btn-sm"
-                        *ngIf='enableDelete'>Eliminar</a>
+                        *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                     </td>
                 </tr>
             </tbody>
