--- a/src/app/client-account-transactions/transaction-list/transaction-list.component.html
+++ b/src/app/client-account-transactions/transaction-list/transaction-list.component.html
@@ -17,7 +17,7 @@
             </header>
             <a class="customFloatedButton"
                 [routerLink]="['/clients-module/current-accounts', { outlets: { edit: ['newTransaction'] } }]"
-                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
                 *ngIf='enableNew'> + Nueva Transacción</a>
         </div>
         <div class="row pl-0 pr-0 ml-0 mr-0 pt-0 heightThree">
@@ -67,8 +67,7 @@
                                         class="btn btn-yellow btn-sm customButtonText"
                                         *ngIf='enableDetail'>Detalle</a>
                                     <a (click)="showModalDelete(deleteTemplate, transaction._id)"
-                                        class="btn btn-red btn-sm"
-                                        *ngIf='enableDelete'>Eliminar</a>
+                                        *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                                 </td>
                             </tr>
                         </tbody>
