--- a/src/app/client-account-transactions/transaction-new/transaction-new.component.html
+++ b/src/app/client-account-transactions/transaction-new/transaction-new.component.html
@@ -102,8 +102,8 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid || hasCashRegister || hasClient || hasPaymentType)"
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="(form.invalid || hasCashRegister || hasClient || hasPaymentType)"
       (click)="saveTransaction()">{{saveButton}}</button>
   </div>
 </div>
