--- a/src/app/client/client-list/client-list.component.html
+++ b/src/app/client/client-list/client-list.component.html
@@ -17,7 +17,7 @@
             </header>
             <a class="customFloatedButton"
                 [routerLink]="['/clients-module/clients', { outlets: { edit: ['newClient'] } }]"
-                class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
                 *ngIf='enableNew'> + Nuevo Cliente</a>
         </div>
 
@@ -69,11 +69,9 @@
                                 <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'
                                     class="align-middle">
                                     <a [routerLink]="['/clients-module/clients', { outlets: { edit: ['editClient', client._id] } }]"
-                                        class="btn btn-yellow btn-sm customButtonText"
-                                        *ngIf='enableEdit'>Editar</a>
+                                        *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
                                     <a (click)="showModalDelete(deleteTemplate, client._id)"
-                                        class="btn btn-red btn-sm"
-                                        *ngIf='enableDelete'>Eliminar</a>
+                                        *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                                 </td>
                             </tr>
                         </tbody>
