--- a/src/app/client/client-new/client-new.component.html
+++ b/src/app/client/client-new/client-new.component.html
@@ -97,7 +97,7 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="(form.invalid)" (click)="saveClient()">{{saveButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="(form.invalid)" (click)="saveClient()">{{saveButton}}</button>
   </div>
 </div>
