--- a/src/app/daily-menu/daily-menu-list/daily-menu-list.component.html
+++ b/src/app/daily-menu/daily-menu-list/daily-menu-list.component.html
@@ -16,7 +16,7 @@
       </header>
   </div>
   <div style="float: right">
-      <a [routerLink]="['newDailyMenu']" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius> + Nuevo Menu del Dia</a>
+      <a [routerLink]="['newDailyMenu']" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius> + Nuevo Menu del Dia</a>
   </div>
 </div>
           
@@ -46,7 +46,7 @@
                   <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ dailyMenu.price | currency:'USD':code:'2.2-2' }}</td>
                   <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="align-middle customShortTh">{{ dailyMenu.startDate <= today && today <= dailyMenu.endDate | dailyMenuAvailable }}</td>
                   <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex)' class="customThTd align-middle">
-                      <a [routerLink]="['edit', dailyMenu._id]" class="btn btn-yellow btn-sm customButtonText">Editar</a>
+                      <a [routerLink]="['edit', dailyMenu._id]"><img src="assets/img/editar.png" height="40px" width="auto"></a>
                       <a (click) = "updateDates(dailyMenu)" class="btn btn-red btn-sm">Activar/Desactivar</a>
                   </td>
               </tr>
