--- a/src/app/order/order-pre/order-pre.component.html
+++ b/src/app/order/order-pre/order-pre.component.html
@@ -20,8 +20,8 @@
   </div>
   <div class="row customFooterModal">
     <div class="customOrderButtons">
-      <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="closeModal()">{{cancelButton}}</button>
-      <button #okButton type="button" class="btn btn-primary btn-sm waves-light" (click)="newOrder()">{{confirmButton}}</button>
+      <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="closeModal()">{{cancelButton}}</button>
+      <button #okButton type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" (click)="newOrder()">{{confirmButton}}</button>
     </div>
   </div>
 </div>
