--- a/src/app/product/product-list/product-list.component.html
+++ b/src/app/product/product-list/product-list.component.html
@@ -16,7 +16,7 @@
         </header>
     </div>
     <div style="float: right">
-        <a [routerLink]="['newProduct']" class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+        <a [routerLink]="['newProduct']" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
             *ngIf='enableNew'> + Nuevo Producto</a>
     </div>
 </div>
@@ -82,11 +82,9 @@
                     <td *ngIf='(i+1 >= mdbTablePagination.firstItemIndex && i < mdbTablePagination.lastItemIndex) && enableActionButtons'
                         class="customThTd align-middle">
                         <a [routerLink]="['edit', product._id]"
-                            class="btn btn-yellow btn-sm customButtonText"
-                            *ngIf='enableEdit'>Editar</a>
+                            *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
                         <a (click)="showModalDelete(deleteTemplate, noDeleteTemplate, product._id)"
-                            class="btn btn-red btn-sm"
-                            *ngIf='enableDelete'>Eliminar</a>
+                            *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                     </td>
                 </tr>
             </tbody>
