--- a/src/app/product/product-new/product-new.component.html
+++ b/src/app/product/product-new/product-new.component.html
@@ -233,8 +233,8 @@
       </div>
     </div>
     <div class="row col-md-2 col-lg-2 col-xl-3 col-sm-2">
-      <button class="btn btn-md btn-primary" type="button" (click)="showModalCancel(cancelTemplate)">Cancelar</button>
-      <button class="btn btn-md btn-primary" [disabled]="productForm.invalid || (productForm.get('stockControl').value && productForm.controls.stock.controls.min.value == 0) || (productForm.get('stockControl').value && productForm.controls.stock.controls.current.value == 0)" type="submit"
+      <button mdbBtn role="button" rounded="true" size="md" mdbWavesEffect [class.btn-primary-custom]="true" type="button" (click)="showModalCancel(cancelTemplate)">Cancelar</button>
+      <button mdbBtn role="button" rounded="true" size="md" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="productForm.invalid || (productForm.get('stockControl').value && productForm.controls.stock.controls.min.value == 0) || (productForm.get('stockControl').value && productForm.controls.stock.controls.current.value == 0)" type="submit"
         (click)="validateSizes()">Guardar</button>
     </div>
   </form>
