--- a/src/app/section/section-list-config/section-list-config.component.html
+++ b/src/app/section/section-list-config/section-list-config.component.html
@@ -19,7 +19,7 @@
             </div>
             <div class="float-right">
                 <a [routerLink]="['/settings/general-settings/sections', { outlets: { edit: ['newSection'] } }]"
-                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                    mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
                     *ngIf='enableNew'> + Nueva Sala
                 </a>
             </div>
@@ -47,11 +47,9 @@
                             <td>{{ section.name }}</td>
                             <td class="align-middle" *ngIf='enableActionButtons'>
                                 <a [routerLink]="['/settings/general-settings/sections', { outlets: { edit: ['editSection', section._id] } }]"
-                                    class="btn btn-yellow btn-sm customButtonText"
-                                    *ngIf='enableEdit'>Editar</a>
+                                    *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
                                 <a (click)="showModalDelete(deleteTemplate, section._id)"
-                                    class="btn btn-red btn-sm"
-                                    *ngIf='enableDelete'>Eliminar</a>
+                                    *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                             </td>
                         </tr>
                     </tbody>
