--- a/src/app/size/size-list/size-list.component.html
+++ b/src/app/size/size-list/size-list.component.html
@@ -19,7 +19,7 @@
             </div>
             <div class="float-right">
                 <a [routerLink]="['/settings/general-settings/size', { outlets: { edit: ['newSize'] } }]"
-                    class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                    mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
                     *ngIf='enableNew'> + Nuevo Tamaño
                 </a>
             </div>
@@ -50,11 +50,9 @@
                                 <td>{{ size.availableDescription }}</td>
                                 <td class="align-middle" *ngIf='enableActionButtons'>
                                     <a [routerLink]="['/settings/general-settings/size', { outlets: { edit: ['editSize', size._id] } }]"
-                                        class="btn btn-yellow btn-sm customButtonText"
-                                        *ngIf='enableEdit'>Editar</a>
+                                        *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
                                     <a (click)="showModalDelete(deleteTemplate, size._id)"
-                                        class="btn btn-red btn-sm"
-                                        *ngIf='enableDelete'>Eliminar</a>
+                                        *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                                 </td>
                             </tr>
                         </tbody>
