--- a/src/app/size/size-new/size-new.component.html
+++ b/src/app/size/size-new/size-new.component.html
@@ -44,9 +44,9 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light"
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
       (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="sizeForm.invalid"
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="sizeForm.invalid"
       (click)="saveSize()">{{saveButton}}</button>
   </div>
 </div>
