--- a/src/app/stock-control/stock-control-modify/stock-control-modify.component.html
+++ b/src/app/stock-control/stock-control-modify/stock-control-modify.component.html
@@ -61,9 +61,9 @@
     </div>
     <div class="col-12">
       <div class="col-7 offset-5">
-        <button type="button" class="btn btn-sm customButtonCancel waves-light"
+        <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
           (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-        <button type="button" class="btn btn-primary btn-sm waves-light" 
+        <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" 
           (click)="updateStock()">{{saveButton}}</button>
       </div>
     </div>
