--- a/src/app/supplier/supplier-edit/supplier-edit.component.html
+++ b/src/app/supplier/supplier-edit/supplier-edit.component.html
@@ -89,9 +89,9 @@
 
     <div class="col-12">
       <div class="col-7 offset-5">
-        <button type="button" class="btn btn-sm customButtonCancel waves-light"
+        <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true"
           (click)="showModalCancel(cancelTemplate)">{{cancelButton}}</button>
-        <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="form.invalid"
+        <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="form.invalid"
           (click)="updateSupplier(supplier)">{{saveButton}}</button>
       </div>
     </div>
