--- a/src/app/user-roles/user-roles-list/user-roles-list.component.html
+++ b/src/app/user-roles/user-roles-list/user-roles-list.component.html
@@ -19,7 +19,7 @@
           </div>
           <div class="float-right">
               <a [routerLink]="['/settings/general-settings/roles-users', { outlets: { edit: ['newUserRole'] } }]"
-                  class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius 
+                  mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius 
                   *ngIf='enableNew'> + {{ 'UserRoles.newRole' | translate }}</a>
           </div>
       </div>
@@ -48,12 +48,10 @@
                           <td>{{ userRole.users }}</td>
                           <td class="align-middle" *ngIf='enableActionButtons'>
                               <a [routerLink]="['/settings/general-settings/roles-users', { outlets: { edit: ['editUserRole', userRole._id] } }]"
-                                  class="btn btn-yellow btn-sm customButtonText"
-                                  *ngIf='enableEdit'>{{ 'Commons.Grid.Buttons.edit' | translate }}</a>
-                              <button [disabled]="userRole.delete === false" type="button"
-                                  class="btn btn-red btn-sm"
+                                  *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
+                              <a [disabled]="userRole.delete === false" type="button"
                                   (click)="showModalDelete(deleteTemplate, userRole._id)"
-                                  *ngIf='enableDelete'>{{ 'Commons.Grid.Buttons.delete' | translate }}</button>
+                                  *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                           </td>
                       </tr>
                   </tbody>
