--- a/src/app/user-roles/user-roles-new/user-roles-new.component.html
+++ b/src/app/user-roles/user-roles-new/user-roles-new.component.html
@@ -42,7 +42,7 @@
 </div>
 <div class="col-12">
   <div class="col-7 offset-5">
-    <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="showModalCancel(cancelTemplate)">{{ 'Commons.Buttons.cancel' | translate }}</button>
-    <button type="button" class="btn btn-primary btn-sm waves-light" [disabled]="userRoleForm.invalid" (click)="saveUserRole()">{{ 'Commons.Buttons.save' | translate }}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.customButtonCancel]="true" (click)="showModalCancel(cancelTemplate)">{{ 'Commons.Buttons.cancel' | translate }}</button>
+    <button type="button" mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [disabled]="userRoleForm.invalid" (click)="saveUserRole()">{{ 'Commons.Buttons.save' | translate }}</button>
   </div>
 </div>
