--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -19,7 +19,7 @@
           </div>
           <div class="float-right">
               <a [routerLink]="['/settings/general-settings/users', { outlets: { edit: ['newUser'] } }]"
-                  class="btn btn-primary btn-sm waves-light customButton" mdbRippleRadius
+                  mdbBtn role="button" rounded="true" size="sm" mdbWavesEffect [class.btn-primary-custom]="true" [class.customButton]="true" mdbRippleRadius
                   *ngIf='enableNew'> + Nuevo usuario</a>
           </div>
       </div>
@@ -51,12 +51,10 @@
                           <td>{{ user.name }}</td>
                           <td class="align-middle" *ngIf='enableActionButtons'>
                               <a [routerLink]="['/settings/general-settings/users', { outlets: { edit: ['editUser', user._id] } }]"
-                                  class="btn btn-yellow btn-sm customButtonText"
-                                  *ngIf='enableEdit'>Editar</a>
-                              <button type="button"
-                                  class="btn btn-red btn-sm"
+                                  *ngIf='enableEdit'><img src="assets/img/editar.png" height="40px" width="auto"></a>
+                              <a 
                                   (click)="showModalDelete(deleteTemplate, user._id)"
-                                  *ngIf='enableDelete'>Eliminar</button>
+                                  *ngIf='enableDelete'><img src="assets/img/eliminar.png" height="40px" width="auto"></a>
                           </td>
                       </tr>
                   </tbody>
