--- a/src/shared/components/error-template/error-template.component.html
+++ b/src/shared/components/error-template/error-template.component.html
@@ -11,7 +11,7 @@
   
   <div class="row customFooterModal">
     <div class="col-3 offset-9">
-      <button type="button" class="btn btn-primary btn-sm waves-light okButton" (click)="closeModal()">{{ buttonOk }}</button>
+      <button type="button" mdbBtn  rounded="true" [class.btn-primary-custom]="true" size="sm" mdbWavesEffect [class.okButton]="true" (click)="closeModal()">{{ buttonOk }}</button>
     </div>
   </div>
 </div>
